# Scouting_ML

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  README_NLP.md  check_columns.py  docker-compose.yml  pyproject.toml  railway.toml  readme2.html  render.yaml  requirements.txt
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 20260325_0001_team_edition_init.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data/model/: big5_players.parquet  big5_players_clean.parquet  big5_predictions_2024-25.csv  big5_predictions_adv.csv  big5_predictions_full_v2.csv  big5_predictions_pos.csv  champion_predictions_2024-25.error_priors.csv  champion_predictions_2024-25.metrics.json  champion_predictions_2024-25.quality.json  champion_shortlist_u23.csv  scout_watchlist.jsonl
docker/nginx/: entrypoint.sh
docs/: data_source_integration_roadmap.md  market_value_benchmark_report.md  provider_pipeline_config.example.json  provider_promotion_pipeline.md  provider_real_data_run_2026-03-10.md  provider_snapshot_collection.example.json  provider_snapshot_collection.md  sofascore_snapshot_collection.estonia_2025.rapidapi.json  sofascore_snapshot_collection.example.json  sofascore_snapshot_collection.md
frontend/: README.md  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/lib/: mock-data.ts  platform-data.ts  types.ts  utils.ts
tmp/: comps.html  fetch_page.py  liverpool.html  rapid_doc.html
(+363 files in other folders)
