[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scouting-ml"
version = "0.1.0"
description = "Football scouting and market value modeling platform."
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.optional-dependencies]
extended-scraping = [
    "playwright==1.48.0",
    "scraperfc==4.1.0",
]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/scouting_ml/tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py311"
